# tree-sitter-dockerfile-fix

./: Cargo.toml  LICENSE  Makefile  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  todo  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dockerfile/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: arg.txt  copy.txt  env.txt
