[package]
name = "tree-sitter-dockerfile"
description = "dockerfile grammar for the tree-sitter parsing library"
version = "0.4.1"
keywords = ["incremental", "parsing", "dockerfile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/4hiziri/tree-sitter-dockerfile-fix"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.24"