[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-dockerfile"
description = "Dockerfile grammar for tree-sitter"
version = "0.4.1"
keywords = ["incremental", "parsing", "tree-sitter", "dockerfile"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/4hiziri/tree-sitter-dockerfile-fix"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "tree-sitter>=0.21.3",
    "tree-sitter-dockerfile",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
tree-sitter-dockerfile = { workspace = true }
